--- a/assets/index.html
+++ b/assets/index.html
@@ -25,14 +25,12 @@
 </header>
 
 <main>
-    <h1 class="text-center"></h1>
+    <h1 class="text-left">About Me</h1>
     <figure>
-        <img src="./bootcamp/Jacob-Ontiveros-Portfolio/assets/banff.jpg" alt="Banff">
+      <div class="card"></div>
+      <figcaption class="text-center">Hi! My name is Jacob. I am an aspiring Data Analyst with a passion for data manipulation/organization!</figcaption>
+      <img src="./banff.png" alt="Banff">
     </figure>
-        <ul>
-            <li>About Me</li>
-                <p>Hi! My name is Jacob Ontiveros and I am an aspiring Data Analayst. The way that data functions and can be manipulated has always fascinated me and I hope to one day evolve into a Senior Analyst for a major corporation</p>
-        </ul>  
     </h1>        
 </main>
 
@@ -41,6 +39,7 @@
         <ul>760-464-5040</ul>
         <ul>jm.ontiveros94@gmail.com</ul>
     </li>
-</footer>
+ </footer>
+
 </body>
 </html> 
